@@ -31,7 +31,6 @@ import org.apache.calcite.test.JdbcFrontLinqBackTest;
 import org.apache.calcite.test.schemata.hr.Employee;
 import org.apache.calcite.util.TestUtil;
 import org.apache.calcite.util.Util;
-import org.apache.calcite.util.Version;
 
 import com.google.common.collect.ImmutableList;
 
@@ -85,7 +84,6 @@ import static org.hamcrest.CoreMatchers.notNullValue;
 import static org.hamcrest.CoreMatchers.nullValue;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.junit.jupiter.api.Assumptions.assumeFalse;
 
 import static java.util.Objects.requireNonNull;
 
@@ -97,6 +95,11 @@ import static java.util.Objects.requireNonNull;
  * <a href="https://issues.apache.org/jira/browse/CALCITE-2853">
  * [CALCITE-2853] avatica.MetaImpl and calcite.jdbc.CalciteMetaImpl are not
  * thread-safe</a>.
+ *
+ * <p>Under JDK 23 and higher, this test requires
+ * "{@code -Djava.security.manager=allow}" command-line arguments due to
+ * Avatica's use of deprecated methods in {@link javax.security.auth.Subject}.
+ * These arguments are set automatically if you run via Gradle.
  */
 @Execution(ExecutionMode.SAME_THREAD)
 class CalciteRemoteDriverTest {
@@ -110,11 +113,6 @@ class CalciteRemoteDriverTest {
   private static @Nullable HttpServer start;
 
   @BeforeAll public static void beforeClass() throws Exception {
-    assumeFalse(TestUtil.getJavaMajorVersion() >= 23
-            && TestUtil.AVATICA_VERSION.compareTo(Version.of(1, 25)) > 0,
-        "Cannot run on JDK 23 and higher with Avatica version 1.25 or lower; "
-            + "enable when [CALCITE-6588] is fixed in Avatica");
-
     localConnection = CalciteAssert.hr().connect();
 
     // Make sure we pick an ephemeral port for the server
