@@ -16,9 +16,6 @@
  */
 package org.apache.calcite.chinook;
 
-import org.apache.calcite.util.TestUtil;
-import org.apache.calcite.util.Version;
-
 import org.junit.jupiter.api.Test;
 
 import java.sql.Connection;
@@ -26,20 +23,18 @@ import java.sql.DriverManager;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 
-import static org.junit.jupiter.api.Assumptions.assumeFalse;
-
 /**
  * Tests against parameters in prepared statement when using underlying JDBC
  * sub-schema.
+ *
+ * <p>Under JDK 23 and higher, this test requires
+ * "{@code -Djava.security.manager=allow}" command-line arguments due to
+ * Avatica's use of deprecated methods in {@link javax.security.auth.Subject}.
+ * These arguments are set automatically if you run via Gradle.
  */
 class RemotePreparedStatementParametersTest {
 
   @Test void testSimpleStringParameterShouldWorkWithCalcite() throws Exception {
-    assumeFalse(TestUtil.getJavaMajorVersion() >= 23
-            && TestUtil.AVATICA_VERSION.compareTo(Version.of(1, 25)) > 0,
-        "Cannot run on JDK 23 and higher with Avatica version 1.25 or lower; "
-            + "enable when [CALCITE-6588] is fixed in Avatica");
-
     // given
     ChinookAvaticaServer server = new ChinookAvaticaServer();
     server.startWithCalcite();
@@ -54,11 +49,6 @@ class RemotePreparedStatementParametersTest {
   }
 
   @Test void testSeveralParametersShouldWorkWithCalcite() throws Exception {
-    assumeFalse(TestUtil.getJavaMajorVersion() >= 23
-            && TestUtil.AVATICA_VERSION.compareTo(Version.of(1, 25)) > 0,
-        "Cannot run on JDK 23 and higher with Avatica version 1.25 or lower; "
-            + "enable when [CALCITE-6588] is fixed in Avatica");
-
     // given
     ChinookAvaticaServer server = new ChinookAvaticaServer();
     server.startWithCalcite();
@@ -75,11 +65,6 @@ class RemotePreparedStatementParametersTest {
   }
 
   @Test void testParametersShouldWorkWithRaw() throws Exception {
-    assumeFalse(TestUtil.getJavaMajorVersion() >= 23
-            && TestUtil.AVATICA_VERSION.compareTo(Version.of(1, 25)) > 0,
-        "Cannot run on JDK 23 and higher with Avatica version 1.25 or lower; "
-            + "enable when [CALCITE-6588] is fixed in Avatica");
-
     // given
     ChinookAvaticaServer server = new ChinookAvaticaServer();
     server.startWithRaw();
